implemented printing correlation function csvs as its own function

--- a/writing/abstract/abstract.tex
+++ b/writing/abstract/abstract.tex
@@ -16,29 +16,32 @@
 \begin{document}
     
     \maketitle
-    We study noise-induced and -stabilized spatial patterns in two distinct stochastic 
-    population model variants for cyclic competition of three species, namely the 
-    Rock-Paper-Scissors (RPS) and the May-Leonard (ML) models. In two dimensions, 
-    it is well established that the ML model can display (quasi-)stable spiral 
-    structures, in contrast to simple species clustering in the RPS system. Our 
-    ultimate goal is to impose control over such competing structures in systems 
-    where both RPS and ML reactions are implemented. To this end, we have employed 
-    Monte Carlo computer simulations to investigate how changing the microscopic 
-    rules in a subsection of a two-dimensional lattice influences the macroscopic 
-    behavior in the rest of the lattice. Specifically, we implement the ML reaction scheme 
-    on a torus, except on a ring-shaped patch, which is set to follow the cyclic 
-    Lotka-Volterra predation rules of the RPS model. There, we observe a marked disruption of 
-    the usual spiral patterns in the form of plane waves emanating from the RPS region. 
-    Using fast Fourier transforms we find that the spacial extent of these disruptions
-    is set by the diffusion rate in the May-Leonard region. Furthermore, the overall 
-    population density drops considerably in the vicinity of the interface between both regions.
+    We study noise-induced and -stabilized spatial patterns in two distinct 
+    stochastic population model variants for cyclic competition of three species, 
+    namely the Rock-Paper-Scissors (RPS) and the May-Leonard (ML) models. In two 
+    dimensions, it is well established that the ML model can display 
+    (quasi-)stable spiral structures, in contrast to simple species clustering 
+    in the RPS system. Our ultimate goal is to impose control over such competing 
+    structures in systems where both RPS and ML reactions are implemented. To 
+    this end, we have employed Monte Carlo computer simulations to investigate 
+    how changing the microscopic rules in a subsection of a two-dimensional 
+    lattice influences the macroscopic behavior in the rest of the lattice. 
+    Specifically, we implement the ML reaction scheme on a torus, except on a 
+    ring-shaped patch, which is set to follow the cyclic Lotka-Volterra 
+    predation rules of the RPS model. There, we observe a marked disruption of 
+    the usual spiral patterns in the form of plane waves emanating from the RPS 
+    region.  Using fast Fourier transforms we find that the spacial extent 
+    of these disruptions is set by the diffusion rate in the May-Leonard region. 
+    Furthermore, the overall population density drops considerably in the 
+    vicinity of the interface between both regions.
 
     %\hskip 
 
-    We will continue to characterize these effects before using our deepened understanding
-    of these systems to develop possible methods for local external control. We plan to
-    begin by exploring the possibility of using pulsed and periodic seeding to either
-    stabilize or destroy the spiral patterns displayed by our simulations.
+    We will continue to characterize these effects before using our deepened 
+    understanding of these systems to develop possible methods for local external 
+    control. We plan to begin by exploring the possibility of using pulsed and 
+    periodic seeding to either stabilize or destroy the spiral patterns displayed 
+    by our simulations.
 
     \hskip
 
